Don't change masthead background color

--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,15 @@ body {
   background: url('https://media.giphy.com/media/3o7WTDJQVuYwhhuLhC/giphy.gif') !important;
 }
 
-#masthead, #primary {
+#masthead,
+#primary {
   -webkit-filter: invert(100%);
   filter: invert(100%);
   background-color: #fff;
   padding: 20px !important;
+}
+#masthead {
+  background: none;
 }
 #masthead img, #primary img {
   -webkit-filter: invert(100%);
